[project]
name = "audiointel"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "kokoro-onnx>=0.4.5",
    "langchain-ollama>=0.2.3",
    "openai-whisper>=20240930",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
]
authors = [
  { name="Brian Muller", email="bamuller@gmail.com" },
]
classifiers = ["Programming Language :: Python :: 3", "Operating System :: OS Independent" ]
license = "MIT"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/bmuller/audiointel"
Issues = "https://github.com/bmuller/audiointel/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audiointel"]

[tool.hatch.version]
path = "src/audiointel/__init__.py"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]